ref: video-update in UI logic restructured big time, now we can send either full re-render for UPD, or flag-update (only updates flags in UI, no recreation of DOM element)
fix: proper dom cleanup on empty videos rerender (they were just hidden by dispaly none, I didn't see it coz usually popup closes)

--- a/extension/popup/popup.css
+++ b/extension/popup/popup.css
@@ -1760,6 +1760,11 @@ header .heading-row {
 .preview-image.placeholder {
   opacity: 0.5;
 }
+.preview-image.generating {
+  opacity: 0.3;
+  -webkit-filter: blur(1px);
+          filter: blur(1px);
+}
 
 .video-duration {
   position: absolute;
