--- a/extension/popup/styles/_video-items.scss
+++ b/extension/popup/styles/_video-items.scss
@@ -101,6 +101,11 @@
     &.placeholder {
         opacity: 0.5;
     }
+
+    &.generating {
+        opacity: 0.3;
+        filter: blur(1px);
+    }
 }
 
 .video-duration {
