--- a/extension/popup/popup.css
+++ b/extension/popup/popup.css
@@ -2598,9 +2598,7 @@ header .heading-row {
   left: 0;
   width: 100%;
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -2621,6 +2619,12 @@ header .heading-row {
   border-top-color: white;
   -webkit-animation: spin 1s linear infinite;
           animation: spin 1s linear infinite;
+}
+
+.preview-container.loading .loader {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 @-webkit-keyframes spin {
