--- a/extension/popup/styles/_animations.scss
+++ b/extension/popup/styles/_animations.scss
@@ -16,7 +16,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    display: flex;
+    display: none; // Hidden by default
     align-items: center;
     justify-content: center;
     z-index: 1;
@@ -34,6 +34,11 @@
         border-top-color: white;
         animation: spin 1s linear infinite;
     }
+}
+
+// Show loader when preview container has loading class
+.preview-container.loading .loader {
+    display: flex;
 }
 
 @keyframes spin {
