--- a/extension/popup/popup.css
+++ b/extension/popup/popup.css
@@ -1776,7 +1776,7 @@ header .heading-row {
   color: white;
   font-size: var(--font-body);
   font-weight: 500;
-  z-index: 1;
+  z-index: 3;
   pointer-events: none;
 }
 
@@ -2622,6 +2622,51 @@ header .heading-row {
 }
 
 .preview-container.loading .loader {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.retry-preview-btn {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+  background: none;
+  color: rgba(255, 255, 255, 0.8);
+  cursor: pointer;
+  display: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  z-index: 2;
+  -webkit-transition: color var(--transition-slow);
+  transition: color var(--transition-slow);
+}
+.retry-preview-btn:hover {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+.retry-preview-btn:hover svg {
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+.retry-preview-btn svg {
+  width: 20px;
+  height: 20px;
+  -webkit-filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.5));
+          filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.5));
+  -webkit-transition: -webkit-transform var(--transition-slow);
+  transition: -webkit-transform var(--transition-slow);
+  transition: transform var(--transition-slow);
+  transition: transform var(--transition-slow), -webkit-transform var(--transition-slow);
+}
+
+.preview-container:not(.loading):not(.has-preview) .retry-preview-btn {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
